--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,8 @@ jobs:
       - name: setup
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 11.0.5
+          architecture: x64
 
       - name: checkout
         uses: actions/checkout@v1
